# EmbeddedIntentRecognizer

./: CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt
cli/intent_recognizer/: CMakeLists.txt  main.cpp
data/: IntentRecognizer.md  README.md  weather_intent_data.csv  weather_intent_uml.txt
data/calendar_intent/: intent_uml_1.txt  intent_uml_2.txt
data/fact_intent/: intent_uml_1.txt
data/weather_intent/: intent_uml_2.txt
lib/: CMakeLists.txt
lib/state_machine/: CMakeLists.txt
lib/state_machine/include/: state.h  state_manager.h
lib/state_machine/src/: state.cpp  state_manager.cpp
lib/state_machine_generator/: CMakeLists.txt
lib/state_machine_generator/include/: csv_state_machine_reader.h  i_reader.h  json_state_machine_reader.h  state_machine_factory.h  xml_state_machine_reader.h
lib/state_machine_generator/src/: csv_state_machine_reader.cpp  json_state_machine_reader.cpp  state_machine_factory.cpp  xml_state_machine_reader.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: string_utils.h
lib/utils/src/: string_utils.cpp
script/: build_and_test.sh
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmark_test.cpp
test/report/: CMakeLists.txt  report.cpp
test/state_machine/: CMakeLists.txt  state_manager_test.cpp  state_test.cpp
test/state_machine_generator/: CMakeLists.txt  state_machine_factory_test.cpp
test/utils/: CMakeLists.txt  string_utils_test.cpp
